Added Input box

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
          </p>
 
          <hr>
-        
+        <div class="input">
+            Enter the age:
+            <input type="text">
+        </div>
     </div>
 </body>
 </html>
