Added number input box

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
          <hr>
         <div class="input">
-            Enter the age:
+            Enter the text:
             <input type="text">
+            Enter the age:
+            <input type="number"
         </div>
     </div>
 </body>
