added close bracket in number box

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Enter the text:
             <input type="text">
             Enter the age:
-            <input type="number"
+            <input type="number">
         </div>
     </div>
 </body>
